--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.2",
+    "@react-navigation/bottom-tabs": "^7.4.7",
+    "@react-navigation/material-top-tabs": "^7.3.7",
+    "@react-navigation/native": "^7.1.17",
     "expo": "~54.0.9",
+    "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.11",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "react-native-text-ticker": "^1.15.0"
   },
   "private": true
 }
